# p4lsp

./: .gitignore  Cargo.toml  P4-VSCODE-REDESIGN-PLAN.md  P4LSP-GAP-ANALYSIS.md  P4LSP-REVIEW-progress.md  README.md  debug_table.rs
.github/workflows/: test.yml
docs/: ARCHITECTURE.md  ROADMAP.md  STATUS.md  review-2026-05-10.md  tree-sitter-audit.md
p4-vscode/: .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
p4-vscode/client/src/: extension.ts
p4-vscode/syntaxes/: p4.tmLanguage.json
p4lsp-server/: Cargo.toml  build.rs
p4lsp-server/examples/: bench.rs  check_errors.rs  check_symbols.rs  debug_scope.rs  debug_struct.rs  debug_table.rs  test_action_body.rs  test_control_body.rs  test_parse.rs
p4lsp-server/src/: completion.rs  diagnostics.rs  document.rs  hover.rs  index.rs  lib.rs  main.rs  parser.rs  parser_pool.rs  references.rs  rename.rs  semantic_tokens.rs  server.rs  typecheck.rs  typer.rs  workspace.rs
stdlib/: builtins.json  core.p4  v1model.p4
tree-sitter-p4/: Cargo.toml  Makefile  Package.swift  binding.gyp  fix_grammar.py  grammar.js  grammar.js.bak  grammar_current.js  grammar_original.js  package-lock.json  package.json  setup.py  tree-sitter.json
tree-sitter-p4/bindings/c/: tree-sitter-p4.pc.in
tree-sitter-p4/bindings/go/: binding.go  binding_test.go  go.mod
tree-sitter-p4/bindings/node/: binding.cc
tree-sitter-p4/bindings/rust/: build.rs  (+1 more)
tree-sitter-p4/queries/: highlights.scm
tree-sitter-p4/src/: grammar.json  node-types.json  parser.c
(+6 files in other folders)
