[package]
name = "p4lsp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "p4lsp-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "io-std", "io-util", "fs"] }
tower-lsp = "0.20"
tree-sitter = "0.25"
dashmap = "6.1"
rayon = "1.10"
ropey = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
regex = "1.11"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.14"

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
